# emergent-civ-sim

./: .docker-quick-ref.md  .gitignore  CHANGELOG.md  CMakeLists.txt  DESIGN.md  DOCKER-IMPLEMENTATION.md  Dockerfile  Dockerfile.windows  IMPLEMENTATION-SUMMARY.md  README.md  STATUS.md  analyze_demographics.py  build.sh  docker-compose.yml  docker-test.sh  metrics.csv  run_analysis.sh  run_sim.sh  run_simulation.sh  sim_commands.txt  test-improvements.sh  test-improvements.txt
cli/: main_kernel.cpp
core/: CMakeLists.txt
core/include/kernel/: AgentStorage.h  GpuWorker.h  Kernel.h
core/include/modules/: Economy.h
core/include/utils/: EventLog.h  Serialization.h  Validation.h
core/src/kernel/: GpuWorker.cu  Kernel.cpp
core/src/modules/: CohortDemographics.cpp  Economy.cpp  MeanField.cpp
core/src/utils/: EventLog.cpp  Serialization.cpp
docs/: API.md  ARCHITECTURE-IMPROVEMENTS.md  DEMOGRAPHIC-ENHANCEMENTS.md  DESIGN.md  EMERGENT-SYSTEMS.md  FEATURES.md  FILE-MANIFEST.md  OPTIMIZATION-QUICKSTART.md  RADICAL-EFFICIENCY-SUMMARY.md
game/include/modules/: Movement.h
game/src/modules/: Movement.cpp
include/: BeliefTypes.h  Kernel.h  KernelSnapshot.h
src/: Kernel.cpp  KernelSnapshot.cpp  Simulation.cpp  Snapshot.cpp  main_kernel.cpp
tests/: CMakeLists.txt  economy_tests.cpp  kernel_tests.cpp
